src/Iframe/Dependencies/Sketch_Visualization/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9093 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 9092 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          stream_idle_timeout: 0s
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: TargetedQueryService }
              - match: { prefix: "/for-dataset-explorer" }
                route: 
                  cluster: gRPCServiceForDatasetExplorer
                  max_grpc_timeout: 0s
              - match: { prefix: "/census" }
                route: { cluster: TargetedQueryServiceCensus }
              cors:
                allow_origin_string_match:
                - prefix: "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
          access_log:
            - name: envoy.file_access_log
              config:
                path: "/dev/stdout"
  clusters:
  - name: TargetedQueryService
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: "lattice-160.cs.colostate.edu", port_value: 9091 }}]
  - name: TargetedQueryServiceCensus
    connect_timeout: 2s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: "lattice-0.cs.colostate.edu", port_value: 50051 }}]
  - name: gRPCServiceForDatasetExplorer
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: "lattice-1.cs.colostate.edu", port_value: 50051 }}]
